# torrite

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  test.yml
src/: builder.rs  cli.rs  config.rs  edit.rs  inspect.rs  interactive_create.rs  lib.rs  main.rs  piece.rs  scanner.rs  trackers.rs  tree.rs  verify.rs
src/hashing/: io.rs  mod.rs  v1.rs  v2.rs
src/models/: file.rs  mod.rs  torrent.rs
tests/: hybrid.rs  metadata.rs  misc.rs  system.rs  tracker_defaults.rs  v1.rs  v2.rs
