[package]
name = "torrite"
version = "1.0.0"
edition = "2024"
authors = ["tajoumaru"]
description = "A CLI utility to create BitTorrent metainfo files written in Rust"
license = "MIT"

[lib]
name = "torrite"
path = "src/lib.rs"

[[bin]]
name = "torrite"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_bencode = "0.2"
serde_bytes = "0.11"
sha1 = { version = "0.10", features = ["asm"] }
sha2 = { version = "0.10", features = ["asm"] }
crossbeam-channel = "0.5"
num_cpus = "1.16"
anyhow = "1.0"
rand = "0.9"
rand_xorshift = { version = "0.4", optional = true }
glob = "0.3"
rayon = "1.11.0"
jwalk = "0.8.1"
serde_json = { version = "1.0.145", optional = true }

[features]
dev = ["rand_xorshift", "serde_json"]

[[bin]]
name = "generate_bench_data"
path = "src/bin/generate_bench_data.rs"
required-features = ["dev"]

[[bin]]
name = "run_benchmarks"
path = "src/bin/run_benchmarks.rs"
required-features = ["dev"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
