[package]
name = "torrite"
version = "1.0.0"
edition = "2024"
authors = ["tajoumaru"]
description = "A CLI utility to create BitTorrent metainfo files written in Rust"
license = "MIT"
default-run = "torrite"

[lib]
name = "torrite"
path = "src/lib.rs"

[[bin]]
name = "torrite"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_bencode = "0.2"
serde_bytes = "0.11"
sha1 = { version = "0.10", features = ["asm"] }
sha2 = { version = "0.10", features = ["asm"] }
crossbeam-channel = "0.5"
num_cpus = "1.16"
anyhow = "1.0"
rand = "0.9"
rand_xorshift = { version = "0.4", optional = true }
glob = "0.3"
rayon = "1.11.0"
jwalk = "0.8.1"
serde_json = "1.0.145"
console = "0.16.2"
indicatif = "0.18.3"
hex = "0.4.3"
urlencoding = "2.1.3"

[features]
dev = ["rand_xorshift"]

[[bin]]
name = "generate_bench_data"
path = "src/bin/generate_bench_data.rs"
required-features = ["dev"]

[[bin]]
name = "run_benchmarks"
path = "src/bin/run_benchmarks.rs"
required-features = ["dev"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
